--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "description": "zero config webpack tool for React, ES6, Babel",
   "main": "webpackreact.js",
+  "bin": {
+    "webpackreact": "./bin/webpackreact.js"
+  }
   "scripts": {
     "setup": "yarn",
     "start": "node webpackreact.js",
