--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "scripts": {
     "setup": "npm install",
-    "build": "node src/webpackreact.js --target node  --entry ./src/webpackreact.js --dest ../bin/ --name webpackreact.js",
+    "clean": "rimraf ./bin/*",
+    "pack": "node src/webpackreact.js --target node  --entry ./src/webpackreact.js --dest git sta./bin/ --name webpackreact.js",
+    "build": "npm run clean && npm run pack",
     "test": "node ./bin/webpackreact.js -h"
   },
   "keywords": [
@@ -52,6 +54,7 @@
     "webpack-dev-server": "^3.1.4"
   },
   "devDependencies": {
-    "cross-env": "^5.2.0"
+    "cross-env": "^5.2.0",
+    "rimraf": "^2.6.2"
   }
 }
